Added note about warning to the readme
Issue #18